[metadata]
name = pyotp2289
version = attr: otp2289.__version__
author = attr: otp2289.__author__
author_email = sgs@pichove.org
description = A pure Python implementation of "A One-Time Password System"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/blackm0re/pyotp2289

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation
    Operating System :: OS Independent
    Topic :: Security :: Cryptography

project_urls =
    Bug Tracker = https://github.com/blackm0re/pyotp2289/issues
    Source = https://github.com/blackm0re/pyotp2289
    API Documentation = https://gnulover.simeonov.no/docs/api/pyotp2289/latest/

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    otp2289 = otp2289.__main__:main
